# dummy

./: CMakeLists.txt
include/: AlgFrz.h  FrzAlg.h  LuckyImageAlg.h  MotionCompensateAlg.h  NlmDenoiseAlg.h
src/: AlgFrz.cpp  LuckyImageAlg.cpp  MotionCompensateAlg.cpp  NlmDenoiseAlg.cpp
